# hinotify-c

./: CHANGELOG.md  LICENSE  hinotify-c.cabal  shell.nix
include/: hinotify.h
src/System/: HINotifyC.hs
